# riscv

./: .gitignore  README.md  env.sh
doc/: dirs.txt
hw/asic/: env.sh
hw/asic/pr/: .gitignore  corners.io  extraction.layermap  mtm_riscv_chip.io  results  run_help_innovus.sh  run_pr.sh  run_pr_batch.sh  streamOut.map
hw/asic/rtl/: _asic.f  mtm_riscv_chip.sv  pads_in.v  pads_out.v  pads_pwr.v
hw/asic/synth/: Makefile  run_help_genus.sh
hw/power_analysis/: ecoTimingDB
hw/power_analysis/scripts/: run_power.tcl
hw/rtl/core/: alu.sv  core.f  core.sv  core_pkg.sv  cu.sv  data_bus.sv  idu.sv  ifu.sv  instr_bus.sv  lsu.sv  rf.sv
hw/rtl/soc/: data_bus_arbiter.sv  instr_bus_arbiter.sv  memory_map.sv  soc.f  soc.sv
hw/sim/common/: clk_if.sv  led_waves_correct.txt  rst_if.sv  tb_mtm_riscv_soc.sv  uart_if.sv
hw/sim/functional/: MorseSignals.svwf  functional.f  simvision.dsn  simvision.trn  xminitialize.exclude
hw/sim/post_layout/: post_layout.f  xminitialize.exclude
sw/: CMakeLists.txt
sw/app/: CMakeLists.txt  link.ld
sw/app/src/: main.cpp
sw/bootloader/: CMakeLists.txt  crt0.S  link.ld
sw/bootloader/src/: main.cpp
sw/libs/libdrivers/: CMakeLists.txt
sw/libs/libdrivers/include/libdrivers/: common.hpp  gpio.hpp  memory_map.hpp  uart.hpp
sw/libs/libdrivers/src/: code_ram.cpp  common.cpp  gpio.cpp  uart.cpp
sw/libs/libmisc/: CMakeLists.txt
tools/: bin_mem_converter.py  boot_mem_generator.py  calibredrv.sh  run_asic_pr.sh  run_asic_synth.sh  run_functional_sim.sh  run_post_layout_sim.sh  run_power_analysis.sh
xsim.dir/work/: work.rlx
(+44 files in other folders)
